refactor(core) merge MemoryUtil